[package]
authors = ["Clemens Tiedt <clemens.tiedt@student.hpi.de>"]
edition = "2018"
name = "influx-client"
version = "0.3.0"
description = "A Rust library to interact with InfluxDB"
license = "MIT"
repository = "https://github.com/ctiedt/influx_client"

[dependencies]
num-traits = "0.2"
reqwest = {version = "0.11.1", features = ["blocking"]}
csv = "1.1.5"
