[package]
authors = ["Clemens Tiedt <clemens.tiedt@student.hpi.de>"]
description = "A Rust library to interact with InfluxDB"
edition = "2018"
license = "MIT"
name = "influx-client"
repository = "https://github.com/ctiedt/influx_client"
version = "0.4.0"

[dependencies]
csv = "1.1"
futures = "0.3"
num-traits = "0.2"
reqwest = {version = "0.11", features = ["blocking"]}

[dev-dependencies]
tokio = {version = "1.9", features = ["full"]}
